# apps/api/internal/models/account.go
@@ -8,14 +8,15 @@ import (
 )
 
 type Account struct {
-	ID          uuid.UUID      `gorm:"type:uuid;default:gen_random_uuid();primaryKey" json:"id"`
-	CreatedAt   time.Time      `json:"created_at"`
-	UpdatedAt   time.Time      `json:"updated_at"`
-	DeletedAt   gorm.DeletedAt `gorm:"index"                                           json:"-"`
-	AccountName string         `gorm:"not null"                                        json:"account_name"`
-	AccountType string         `gorm:"not null"                                        json:"account_type"`
-	TaxType     string         `gorm:"not null"                                        json:"tax_type"`
-	Balance     float64        `json:"balance"`
+	ID               uuid.UUID      `gorm:"type:uuid;default:gen_random_uuid();primaryKey" json:"id"`
+	CreatedAt        time.Time      `json:"created_at"`
+	UpdatedAt        time.Time      `json:"updated_at"`
+	DeletedAt        gorm.DeletedAt `gorm:"index"                                           json:"-"`
+	AccountName      string         `gorm:"not null"                                        json:"account_name"`
+	AccountType      string         `gorm:"not null"                                        json:"account_type"`
+	TaxType          string         `gorm:"not null"                                        json:"tax_type"`
+	DefaultCostBasis string         `gorm:"not null;default:FIFO"                           json:"default_cost_basis"`
+	Balance          float64        `json:"balance"`
 
 	Transactions []Transaction `json:"transactions,omitempty"`
 	Owners       []User        `gorm:"many2many:account_owners;"                       json:"owners,omitempty"`
